# ultimate-kg

./: .gitignore
.claude/: settings.local.json
.claude/agents/: work-completion-summary.md
.claude/hooks/push_notifications/: README.md  __init__.py  handler.py
.claude/hooks/voice_notifications/: handler.py
ultimate_kg_proj/: CLAUDE.md  INITIAL.md  local_conversion.md
ultimate_kg_proj/.claude/: settings.json  settings.local.json
ultimate_kg_proj/.claude/agents/: template-generator.md
ultimate_kg_proj/PRPs/: agentic-graphrag-a2a.md
ultimate_kg_proj/a2a-google-adk/: README.md  copy_template.py
ultimate_kg_proj/a2a-google-adk/PRPs/: INITIAL.md
ultimate_kg_proj/a2a-google-adk/config/: a2a_server_config.py
ultimate_kg_proj/agentic_graphrag/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  TROUBLESHOOTING.md  __init__.py  docker-compose.yml  main.py  pytest.ini  requirements.txt  run_a2a_server.py  run_tests.py  setup.py  validate_system.py
ultimate_kg_proj/agentic_graphrag/agents/: __init__.py  connection_detector.py  extraction_pipeline.py  kg_agent.py  notification_manager.py  schemas.py
ultimate_kg_proj/agentic_graphrag/config/: __init__.py
ultimate_kg_proj/agentic_graphrag/server/: __init__.py  a2a_server.py  a2a_utils.py
ultimate_kg_proj/agentic_graphrag/tests/: __init__.py  test_a2a_server.py  test_integration.py  test_kg_agent.py
ultimate_kg_proj/cognee-graphrag/: README.md  copy_template.py
ultimate_kg_proj/cognee-graphrag/config/: lancedb.py
ultimate_kg_proj/context/cognee-graphrag/: .env.example  CLAUDE.md  claude_settings.json  docker-compose.yml  pyproject.toml  settings.json.example
ultimate_kg_proj/context/cognee-graphrag/config/: __init__.py  mcp_env_setup.py  neo4j.py  sqlite.py
ultimate_kg_proj/context/cognee-graphrag/examples/: graphrag_queries.py  mcp_integration.py
ultimate_kg_proj/context/cognee-graphrag/workflows/: document_analysis.md  knowledge_extraction.md  research_workflow.md
ultimate_kg_proj/google-adk/: CLAUDE.md
use-cases/cognee-graphrag/: docker-compose.minimal.yml
(+61 files in other folders)
